k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prestito
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prestito
  template:
    metadata:
      labels:
        app: prestito
    spec:
      containers:
        - name: prestito
          image: registry:5000/lib-prestito:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
