k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prestito
spec:
  selector:
    app: prestito
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
