k8s/db-modifica-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-modifica
spec:
  selector:
    app: postgres-modifica
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
