k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-prestito
spec:
  selector:
    app: postgres-prestito
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
