k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
  type: NodePort
