k8s/modifica-service.yml
apiVersion: v1
kind: Service
metadata:
  name: modifica
spec:
  selector:
    app: modifica
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
  type: ClusterIP
