k8s/modifica-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modifica
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/modifica
            pathType: Prefix
            backend:
              service:
                name: modifica
                port:
                  number: 8001
